cycle 3 starting commit (adjusted all non-django components / python notebooks)

--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -64,6 +64,53 @@
     "    template = \"\"\"{ui_element} from the website: {url}\"\"\"\n",
     "    model_str = \"llamalora4\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelfile\n",
+    "- replace input content with the context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}\n",
+    "\n",
+    "{{ end }}{{ if .Prompt }}### Instruction:\n",
+    "\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing. Given a UI element, generate a functional usability test case with detailed test scenarios.\n",
+    "\n",
+    "The UI element could be a button, link, text, or input field (some elements have a link attached to them). Consider the attribute attached to the UI element as the attribute acts as a hint about the primary focus of the test case. Also consider the following usability aspects:\n",
+    "\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Only output the following: Objective (What the test aims to verify), Preconditions (Any setup or conditions required before testing), Test Steps (Step-by-step actions to perform the test), and Expected Result (Expected outcome if the UI element works correctly). The format is this: objective~preconditions~test steps~expected result\n",
+    "\n",
+    "DO NOT output anything else but one test case in the said format.\n",
+    "\n",
+    "### Response:\n",
+    "\n",
+    "{{ .Response }}\n",
+    "\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"### Instruction:\" \n",
+    "\n",
+    "SYSTEM \"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\""
+   ]
   }
  ],
  "metadata": {
