--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -595,6 +595,82 @@
     "\n",
     "    return return_data\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3\n",
+    "- add Common Error Fixer / Validator Function\n",
+    "- add rompt Adjustments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Prompt Generator + LLM\n",
+    "# Langchain and Ollama\n",
+    "import langchain\n",
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "TEMPLATE_SETTING = 1\n",
+    "DEBUG_SETTING = 1\n",
+    "\n",
+    "if (TEMPLATE_SETTING == 0):\n",
+    "    # Template for non fine tuned model\n",
+    "    # CONTEXT V3\n",
+    "    template = \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    model_str = \"llama3.1\"\n",
+    "elif (TEMPLATE_SETTING == 1):\n",
+    "    # template and model for fine-tuned version\n",
+    "    template = \"\"\"Generate a test case for the following UI element: {ui_element} from the website: {url}\"\"\"\n",
+    "    model_str = \"\"\n",
+    "\n",
+    "# OPTIONAL FUNCTION COMMON ERROR REMOVAL/ADJUSTMENT\n",
+    "def remove_common_error(output : str):\n",
+    "    # Errors are strings that commonly appear as errors in the intended output\n",
+    "    errors = [\"Objective~Preconditions~Test Steps~Expected Result\", \"Objective~\"]\n",
+    "    # Adjustments are strings that are not intended to be deleted, but instead adjusted\n",
+    "    adjustments = [\"Preconditions~\", \"Test Steps~\", \"Expected Result~\"]\n",
+    "    for error in errors:\n",
+    "        output = output.replace(error, \"\")\n",
+    "    for adjustment in adjustments:\n",
+    "        output = output.replace(adjustment, \"~\")\n",
+    "\n",
+    "def load_model_chain(template : str =  template, model_str : str = model_str, temperature=0):\n",
+    "    prompt = ChatPromptTemplate.from_template(template)\n",
+    "    model = OllamaLLM(model=model_str, temperature=temperature)\n",
+    "    chain = prompt | model\n",
+    "    return chain\n",
+    "\n",
+    "def create_test_cases(data, model_str : str = model_str , template : str = template, url : str = \"placeholder\", common_error : str = common_error):\n",
+    "    \n",
+    "    # Load LLM Chain\n",
+    "    chain = load_model_chain(template, model_str)\n",
+    "\n",
+    "    # Return Data\n",
+    "    return_data = []\n",
+    "    \n",
+    "    i = 0\n",
+    "    total = len(data)\n",
+    "    for item in data:\n",
+    "        test_case = chain.invoke({\"ui_element\": str(item), \"url\": url})\n",
+    "        return_data.append(test_case)\n",
+    "        # LLM Reset To Free Up Context\n",
+    "        chain = load_model_chain(template, model_str)\n",
+    "        if (DEBUG_SETTING == 1):\n",
+    "            print(f\"test case {i} out of {total} generated\")\n",
+    "        i += 1\n",
+    "\n",
+    "    return return_data"
+   ]
   }
  ],
  "metadata": {
