--- a/fine_tuning/dataset_correction.ipynb
+++ b/fine_tuning/dataset_correction.ipynb
@@ -22,11 +22,16 @@
     "print(df)\n",
     "\n",
     "# Correction Procedure (clear input column)\n",
-    "i = 0\n",
-    "while i<len(df):\n",
-    "    df['instruction'][i] = df['instruction'][i].replace(df['instruction'][i], df['instruction'][i] + \" \" + df['input'][i])\n",
-    "    df['input'][i] = df['input'][i].replace(df['input'][i], \"\")\n",
-    "    i+=1\n",
+    "def correction_dataset(df, correction_procedure : str = \"A\"):\n",
+    "    if (correction_procedure == \"A\"):\n",
+    "        # Correction Procedure A : 1) Convert Instruction Column Contents to Instruction+Input, Clear Input Contents\n",
+    "        i = 0\n",
+    "        while i<len(df):\n",
+    "            df['instruction'][i] = df['instruction'][i].replace(df['instruction'][i], df['instruction'][i] + \" \" + df['input'][i])\n",
+    "            df['input'][i] = df['input'][i].replace(df['input'][i], \"\")\n",
+    "            i+=1\n",
+    "\n",
+    "df = correction_dataset(df)\n",
     "print(df)\n",
     "\n",
     "# Convert to CSV\n",
