--- a/fine_tuning/fine_tuning_notebook.ipynb
+++ b/fine_tuning/fine_tuning_notebook.ipynb
@@ -22,14 +22,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%capture\n",
     "!pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
     "!pip install --no-deps cut_cross_entropy unsloth_zoo\n",
     "!pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
-    "!pip install --no-deps unsloth\n",
-    "\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "!pip install --no-deps unsloth"
    ]
   },
   {
@@ -103,10 +110,24 @@
     "pass\n",
     "\n",
     "from datasets import load_dataset\n",
-    "dataset_location = \"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/fine_tuning_cycle_1.csv\"\n",
+    "dataset_location = \"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/Cycle2_dataset - train reformatted.csv\"\n",
     "dataset = load_dataset('csv', data_files=dataset_location, split = \"train\")\n",
-    "dataset = dataset.map(formatting_prompts_func, batched = True,)\n",
-    "\n",
+    "dataset = dataset.map(formatting_prompts_func, batched = True,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Train Parameters Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Trainer Setup\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
@@ -126,7 +147,7 @@
     "        warmup_steps = 5,\n",
     "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
     "        max_steps = 60,\n",
-    "        learning_rate = 2e-4,\n",
+    "        learning_rate = 2e-4, # 1e-4\n",
     "        fp16 = not is_bfloat16_supported(),\n",
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
@@ -190,38 +211,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alpaca_prompt = Copied from above\n",
+    "## Alpaca Prompt Copy\n",
+    "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{}\n",
+    "\n",
+    "### Input:\n",
+    "{}\n",
+    "\n",
+    "### Response:\n",
+    "{}\"\"\"\n",
+    "\n",
+    "# Alpaca Prompt -> Output\n",
     "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
     "inputs = tokenizer(\n",
     "[\n",
     "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
-    "        \"Link Element : \", # input\n",
+    "        \"Generate a test case for the following UI Element: Link Element 'Euskara' With URL https://eu.wikipedia.org/wiki/ from the website: https://en.wikipedia.org/wiki/Main_Page\", # instruction #\n",
+    "        \"\", # input\n",
     "        \"\", # output - leave this blank for generation!\n",
     "    ),\n",
-    "\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction\n",
-    "        \"Button Element : \", # input\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    ),\n",
-    "\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
-    "        \"Header Element : \", #\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    ),\n",
-    "\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
-    "        \"Input Element : \", #\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    )\n",
-    "\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
+    "output = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
     "\n",
-    "outputs = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
-    "tokenizer.batch_decode(outputs)"
+    "print(tokenizer.batch_decode(output))"
    ]
   },
   {
@@ -238,7 +252,7 @@
    "outputs": [],
    "source": [
     "## LORA Saving\n",
-    "if False:\n",
+    "if True:\n",
     "    model.save_pretrained(\"lora_model\")  # Local saving\n",
     "    tokenizer.save_pretrained(\"lora_model\")\n",
     "    # model.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
@@ -265,35 +279,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Download without losing runtime\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "# 5 minutes\n",
+    "i = 0\n",
+    "while i<100:\n",
+    "  time.sleep(3)\n",
+    "  i+=1"
+   ]
   }
  ],
  "metadata": {
