--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -7845,6 +7845,171 @@
     "\n",
     "    return data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "\n",
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "def setup_driver():\n",
+    "    try :\n",
+    "        options = webdriver.FirefoxOptions()\n",
+    "        options.add_argument(\"--headless\")\n",
+    "        driver = webdriver.Firefox(options=options) # Default with Firefox\n",
+    "    except Exception:\n",
+    "        try : \n",
+    "            driver = webdriver.Chrome() # Default with Chrome            \n",
+    "            ## driver = webdriver.Chrome(options=options)\n",
+    "\n",
+    "            ## Uncomment when setting up for gcolab (and using chrome)\n",
+    "            # from selenium.webdriver import ChromeOptions\n",
+    "            # from selenium.webdriver.chrome.service import Service\n",
+    "            # from webdriver_manager.chrome import ChromeDriverManager\n",
+    "            # from selenium.webdriver.chrome.options import Options\n",
+    "            # import google_colab_selenium as gs\n",
+    "            # options = ChromeOptions()\n",
+    "            # options.add_argument(\"--headless\")\n",
+    "            # driver = gs.Chrome()\n",
+    "        except Exception:\n",
+    "            try : \n",
+    "                options = webdriver.EdgeOptions()\n",
+    "                options.add_argument(\"--no-sandbox\")\n",
+    "                options.add_argument(\"--headless\")\n",
+    "                driver = webdriver.Edge(options=options) # Default with Edge\n",
+    "            except Exception:\n",
+    "                print(\"Error. No usable browser found for scraping\")\n",
+    "    \n",
+    "    return driver\n",
+    "\n",
+    "def get_url():\n",
+    "    return input(\"Enter Website URL: \")\n",
+    "\n",
+    "def data_scrape(url):\n",
+    "    driver = setup_driver()\n",
+    "    data = []\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    # BUTTONS\n",
+    "    buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "    for button in buttons:\n",
+    "        if button.is_displayed():\n",
+    "            # Button Element Attributes\n",
+    "            button_text = f\"Button Element '{button.text}'\" if (button.text != None and button.text != \"\") else \"Button Element Without Name (might be an image)\"\n",
+    "            button_size = f\"With Size Attribute {button.size}\" if button.size != None else \"\"\n",
+    "            button_color = f\"With Color Attribute {button.value_of_css_property(\"color\")}\" if button.value_of_css_property(\"color\") != None else \"\"\n",
+    "            button_background_color = f\"With Background Color Attribute {button.value_of_css_property(\"background-color\")}\" if button.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "            button_enabled = \"Clickable\" if button.is_enabled() else \"Not Clickable\"\n",
+    "            \n",
+    "            # Store Button Element\n",
+    "            store_clickability = f\"{button_enabled} {button_text}\"\n",
+    "            data.append(store_clickability)\n",
+    "            if (button_color != \"\" or button_background_color != \"\"):\n",
+    "                store_color = f\"{button_text} {button_color} {button_background_color} \"\n",
+    "                data.append(store_color)\n",
+    "            if (button_size != \"\"):\n",
+    "                store_size = f\"{button_text} {button_size}\"\n",
+    "                data.append(store_size)\n",
+    "\n",
+    "    ## LINKS  \n",
+    "    links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "    for link in links:\n",
+    "        if link.is_displayed():\n",
+    "            # Link Element Attributes\n",
+    "            link_text = f\"Link Element '{link.text}'\" if (link.text != None and link.text != \"\") else \"Link Element Without Name (might be an image)\"\n",
+    "            link_url = f\"With URL {link.get_attribute('href')}\" if link.get_attribute('href') != None else \"Without URL\"\n",
+    "            # Additional Attributes\n",
+    "            link_rel = f\"With rel attribute {link.get_attribute('rel')}\" if link.get_attribute('rel') != None and link.get_attribute('rel') != \"\" else \"\"\n",
+    "            link_target = f\"With target attribute {link.get_attribute('target')}\" if link.get_attribute('target') != None and link.get_attribute('target') != \"\" else \"\"\n",
+    "            link_download = f\"A download is attached to document {link.get_attribute('download')}\" if link.get_attribute('download') != None and link.get_attribute('download') != \"\" else \"\"\n",
+    "            \n",
+    "            # Store Link Element\n",
+    "            store_navigation = f\"{link_text} {link_url} {link_target} {link_rel}\"\n",
+    "            data.append(store_navigation)\n",
+    "            if link_download != \"\":\n",
+    "                store_download = f\"{link_text} {link_download}\"\n",
+    "                data.append(store_download)\n",
+    "\n",
+    "    # TEXT\n",
+    "    # Heading Elements\n",
+    "    for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "        headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "        for heading in headings:\n",
+    "            if heading.is_displayed():\n",
+    "                \n",
+    "                text_color = f\"With Color {heading.value_of_css_property(\"color\")}\" if heading.value_of_css_property(\"color\") != None else \"\"\n",
+    "                text_background_color = f\"With Background Color {heading.value_of_css_property(\"background-color\")}\" if heading.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "                store = f\"Heading Element (h{level}): '{heading.text}'\"\n",
+    "                \n",
+    "                # Store\n",
+    "                data.append(store)\n",
+    "                if (text_color != \"\" or text_background_color != \"\"):\n",
+    "                    data.append(f\"{store} {text_color} {text_background_color}\")\n",
+    "\n",
+    "    # Paragraph Elements\n",
+    "    paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "    for paragraph in paragraphs:\n",
+    "        if paragraph.is_displayed():\n",
+    "            \n",
+    "            text_color = f\"With Color {paragraph.value_of_css_property(\"color\")}\" if paragraph.value_of_css_property(\"color\") != None else \"\"\n",
+    "            text_background_color = f\"With Background Color {paragraph.value_of_css_property(\"background-color\")}\" if paragraph.value_of_css_property(\"background-color\") != None else \"\"\n",
+    "            store = f\"Paragraph Element: '{paragraph.text}'\"\n",
+    "\n",
+    "            # Store\n",
+    "            data.append(store)\n",
+    "            if (text_color != \"\" or text_background_color != \"\"):\n",
+    "                    data.append(f\"{store} {text_color} {text_background_color}\")\n",
+    "\n",
+    "    # Input Elements\n",
+    "    input_tags = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "    for input_tag in input_tags:\n",
+    "        if input_tag.is_displayed():\n",
+    "            # Basic Attributes\n",
+    "            input_field_name = f\"Input Field Element: '{input_tag.get_attribute('name')}'\" if input_tag.get_attribute('name') != None else \"Without Name\"\n",
+    "            input_field_type = f\"With Type {input_tag.get_attribute('type')}\" if input_tag.get_attribute('name') != None else \"Without Type\"\n",
+    "            # Additional Attributes\n",
+    "            input_field_value = f\"With Value {input_tag.get_attribute('value')}\" if input_tag.get_attribute('name') != None else \"Without Value\"\n",
+    "            input_field_placeholder = f\"With Placeholder '{input_tag.get_attribute('placeholder')}'\" if input_tag.get_attribute('name') != None else \"Without Placeholder\"\n",
+    "            input_field_readonly = f\"Is Readonly\" if input_tag.get_attribute('readonly') != None else \"Is Editable\"\n",
+    "            input_field_disabled = f\"Disabled\" if input_tag.get_attribute('disabled') != None else \"Enabled\"\n",
+    "            input_field_required = f\"Is Required\" if input_tag.get_attribute('required') != None else \"Not Required\"\n",
+    "            input_field_autocomplete = f\"Is Autocomplete\" if input_tag.get_attribute('autocomplete') != None else \"Not Autocomplete\"\n",
+    "\n",
+    "            # Store based on type\n",
+    "            if (input_tag.get_attribute('type') == \"submit\"):\n",
+    "                store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")} {input_field_disabled}\"\n",
+    "                data.append(store)\n",
+    "            else:\n",
+    "                store = f\"{input_field_disabled} {input_field_name} {input_field_type} {input_field_required}\"\n",
+    "                data.append(store)\n",
+    "                store_value = f\"{input_field_name} {input_field_type} {input_field_value}\"\n",
+    "                data.append(store_value)\n",
+    "                store_placeholder = f\"{input_field_name} {input_field_type} {input_field_placeholder}\"\n",
+    "                data.append(store_placeholder)\n",
+    "                store_readonly = f\"{input_field_name} {input_field_type} {input_field_readonly}\"\n",
+    "                data.append(store_readonly)\n",
+    "                store_autocomplete = f\"{input_field_name} {input_field_type} {input_field_autocomplete}\"\n",
+    "                data.append(store_autocomplete)\n",
+    "            \n",
+    "    # Close the browser\n",
+    "    driver.quit()\n",
+    "\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
