--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -81,7 +81,7 @@
     "text_data = []\n",
     "i = 0\n",
     "while (i < len(input_data)):\n",
-    "    template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]}\"\n",
+    "    template = f\"####Question:\\n Generate test case for the following UI element: {input_data[i]} from website: {url}\"\n",
     "    text_data.append(template)\n",
     "    i+=1\n",
     "    \n",
@@ -294,11 +294,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3: Error Checking"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Table Dataframe Initialization\n",
+    "def dataframe_init(data):\n",
+    "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
+    "    return df\n",
+    "\n",
+    "# CSV Generator\n",
+    "def csv_from_test_case_batches(filename, data):\n",
+    "    cols = dataframe_init(data)\n",
+    "    cols.to_csv(f\"{filename}.csv\", sep='\\t', encoding='utf-8', index=False, header=True)\n",
+    "\n",
+    "def create_fine_tuning_dataset(scraped_data, llm_output, name : str = \"fine_tuning_dataset\", url : str = \"\"):\n",
+    "    # Dataset Generator : Resulting Dataset Columns / Parameters\n",
+    "    out_data = llm_output # LLM Output\n",
+    "    in_data = []\n",
+    "    instruction_data = []\n",
+    "    i = 0\n",
+    "    while (i < len(scraped_data)):\n",
+    "        # Instruction / Prompt\n",
+    "        template = f\"Generate test case for the following UI element: {scraped_data[i]} from the website: {url}\"\n",
+    "        instruction_data.append(template)\n",
+    "\n",
+    "        # Constant Context\n",
+    "        input_context = f\"\"\n",
+    "        in_data.append(input_context)\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"output\" : out_data, \n",
+    "            \"input\" : in_data, \n",
+    "            \"instruction\" : instruction_data}\n",
+    "    csv_from_test_case_batches(name, data)\n",
+    "    return dataframe_init(data) \n",
+    "\n",
+    "# System Proper Parameters\n",
+    "def create_table_dataset(llm_output):\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = 0\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "        \n",
+    "        # Validate and skip if split is a failure\n",
+    "        if len(split_test_case) != 4:\n",
+    "            # Test Case ID\n",
+    "            id.append(i+1)\n",
+    "            # Test Case Objective\n",
+    "            objective.append(split_test_case[0])\n",
+    "            # Test Case Precondition\n",
+    "            precondition.append(split_test_case[1])\n",
+    "            # Test Case Steps \n",
+    "            test_steps.append(split_test_case[2])\n",
+    "            # Test Case Expected Output\n",
+    "            expected_result.append(split_test_case[3])\n",
+    "            # Test Case Actual Result\n",
+    "            actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)"
+   ]
   }
  ],
  "metadata": {
