updated dataset_generator to v3

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -617,32 +617,63 @@
     "from langchain_ollama.llms import OllamaLLM\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "TEMPLATE_SETTING = 1\n",
+    "TEMPLATE_SETTING = 0\n",
     "DEBUG_SETTING = 1\n",
     "\n",
     "if (TEMPLATE_SETTING == 0):\n",
     "    # Template for non fine tuned model\n",
     "    # CONTEXT V3\n",
-    "    template = \"\"\"\n",
-    "    \n",
-    "    \"\"\"\n",
+    "    template = \"\"\"You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "    Consider the following usability aspects:\n",
+    "    Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "    Responsiveness (behavior across different screen sizes, etc.)\n",
+    "    Feedback (hover effects, click responses, error messages, etc.)\n",
+    "    Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "    User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "    Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "    Given this UI Element: {ui_element}\n",
+    "    From this website: {url}\n",
+    "\n",
+    "    Generate a functional usability test case with the following aspects, separated by a `~`:\n",
+    "    - **Objective**: Clearly state the objective of the test.\n",
+    "    - **Preconditions**: List any preconditions that need to be met.\n",
+    "    - **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "    - **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "    Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "    Objective: [Describe the objective] \n",
+    "    ~ Preconditions: [List preconditions, use dashes] \n",
+    "    ~ Test Steps: [Step-by-step guide] \n",
+    "    ~ Expected Output: [Describe the expected output, use dashes]\"\"\"\n",
     "\n",
     "    model_str = \"llama3.1\"\n",
     "elif (TEMPLATE_SETTING == 1):\n",
     "    # template and model for fine-tuned version\n",
     "    template = \"\"\"Generate a test case for the following UI element: {ui_element} from the website: {url}\"\"\"\n",
-    "    model_str = \"\"\n",
+    "    model_str = \"qallama\"\n",
     "\n",
     "# OPTIONAL FUNCTION COMMON ERROR REMOVAL/ADJUSTMENT\n",
-    "def remove_common_error(output : str):\n",
-    "    # Errors are strings that commonly appear as errors in the intended output\n",
-    "    errors = [\"Objective~Preconditions~Test Steps~Expected Result\", \"Objective~\"]\n",
-    "    # Adjustments are strings that are not intended to be deleted, but instead adjusted\n",
-    "    adjustments = [\"Preconditions~\", \"Test Steps~\", \"Expected Result~\"]\n",
-    "    for error in errors:\n",
-    "        output = output.replace(error, \"\")\n",
-    "    for adjustment in adjustments:\n",
-    "        output = output.replace(adjustment, \"~\")\n",
+    "def remove_common_error(output : str, setting : int = 0):\n",
+    "    if (setting == 0 or setting == 2):\n",
+    "        # Errors are strings that commonly appear as errors in the intended output\n",
+    "        errors = [\"Objective~Preconditions~Test Steps~Expected Result\", \n",
+    "                \"Objective:\", \"**Objective**:\",\n",
+    "                \"Preconditions:\", \"**Preconditions**:\",\n",
+    "                \"Test Steps:\", \"**Test Steps**:\",\n",
+    "                \"Expected Output:\", \"**Expected Output**:\",\n",
+    "                \"**** \"\n",
+    "                ]\n",
+    "        for error in errors:\n",
+    "            output = output.replace(error, \"\")\n",
+    "    if (setting == 1 or setting == 2):\n",
+    "        # Adjustments are strings that are not intended to be deleted, but instead adjusted\n",
+    "        adjustments = [\"Preconditions~\", \"Test Steps~\", \"Expected Result~\"]\n",
+    "        for adjustment in adjustments:\n",
+    "            output = output.replace(adjustment, \"~\")\n",
+    "    return output\n",
     "\n",
     "def load_model_chain(template : str =  template, model_str : str = model_str, temperature=0):\n",
     "    prompt = ChatPromptTemplate.from_template(template)\n",
@@ -650,7 +681,7 @@
     "    chain = prompt | model\n",
     "    return chain\n",
     "\n",
-    "def create_test_cases(data, model_str : str = model_str , template : str = template, url : str = \"placeholder\", common_error : str = common_error):\n",
+    "def create_test_cases(data, model_str : str = model_str , template : str = template, url : str = \"placeholder\"):\n",
     "    \n",
     "    # Load LLM Chain\n",
     "    chain = load_model_chain(template, model_str)\n",
@@ -662,6 +693,7 @@
     "    total = len(data)\n",
     "    for item in data:\n",
     "        test_case = chain.invoke({\"ui_element\": str(item), \"url\": url})\n",
+    "        test_case = remove_common_error(test_case)\n",
     "        return_data.append(test_case)\n",
     "        # LLM Reset To Free Up Context\n",
     "        chain = load_model_chain(template, model_str)\n",
@@ -671,6 +703,13 @@
     "\n",
     "    return return_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
