updated django to have fixed formatting and did a test run of v3 prompt on the django app

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -327,7 +327,7 @@
     "        split_test_case = test_case.split('~')\n",
     "        \n",
     "        # Validate and skip if split is a failure\n",
-    "        if len(split_test_case) != 4:\n",
+    "        if len(split_test_case) == 4:\n",
     "            # Test Case ID\n",
     "            id.append(i+1)\n",
     "            # Test Case Objective\n",
