inititated scraped data adjustment functions for table result divisions

--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -7851,7 +7851,7 @@
    "metadata": {},
    "source": [
     "##### Version 3\n",
-    "- "
+    "- trimming"
    ]
   },
   {
@@ -8009,6 +8009,143 @@
     "    driver.quit()\n",
     "\n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3.A - Input Division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective 1 : Divide inputs to divide tables\n",
+    "\n",
+    "def divide_scraped_data(scraped_data, mode=\"BY_ELEMENT\", elements = []):\n",
+    "    divided_scraped_data = []\n",
+    "    \n",
+    "    # Based on category titles\n",
+    "    if (mode==\"BY_TITLE\"):\n",
+    "        # Initiate titles\n",
+    "        category_titles = [\n",
+    "            \"Button Element\",\n",
+    "            \"Link Element\",\n",
+    "            \"Heading Element\",\n",
+    "            \"Paragraph Element\",\n",
+    "            \"Form Submit Button Element\",\n",
+    "            \"Input Field Element\"\n",
+    "        ]\n",
+    "        # Inititate sublists\n",
+    "        buttons = []\n",
+    "        links = []\n",
+    "        headers = []\n",
+    "        paragraphs = []\n",
+    "        form_submits = []\n",
+    "        inputs = []\n",
+    "        # Initiate mainlist\n",
+    "        divided_scraped_data = [\n",
+    "            buttons,\n",
+    "            links,\n",
+    "            headers,\n",
+    "            paragraphs,\n",
+    "            form_submits,\n",
+    "            inputs\n",
+    "        ]\n",
+    "        i = 0\n",
+    "        while (i < len(scraped_data)):\n",
+    "            # Check through titles\n",
+    "            for title in category_titles:\n",
+    "                if (title in scraped_data[i]):\n",
+    "                    divide_scraped_data[title.index()].append(scraped_data[i])\n",
+    "                    break\n",
+    "            i+=1\n",
+    "\n",
+    "    # Based on element individuality\n",
+    "    elif (mode==\"BY_ELEMENT\"):\n",
+    "        i = 0\n",
+    "        j = 1\n",
+    "        while (i < len(scraped_data)):\n",
+    "            if (i == 0):\n",
+    "                prev_element = scraped_data[i]\n",
+    "                divide_scraped_data.append(j) # divide_scraped_data.append(False)\n",
+    "            else:\n",
+    "                if prev_element == scraped_data[i]:\n",
+    "                    divide_scraped_data.append(j) # divide_scraped_data.append(True)\n",
+    "                else:\n",
+    "                    j+=1\n",
+    "                    prev_element = scraped_data[i]\n",
+    "                    divide_scraped_data.append(j) # divide_scraped_data.append(False)\n",
+    "            i+=1\n",
+    "            \n",
+    "    return divided_scraped_data\n",
+    "\n",
+    "\n",
+    "# Objecitve 2 : Divide duplicate elements to display test case 1.a, 1.b, etc.\n",
+    "# - Integratable to scraper\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "def element_scrape(url):\n",
+    "    driver = setup_driver()\n",
+    "    elements = []\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    # BUTTONS\n",
+    "    buttons = driver.find_elements(By.CSS_SELECTOR, \"button\")\n",
+    "    for button in buttons:\n",
+    "        if button.is_displayed():\n",
+    "            # Button Element Attributes\n",
+    "            button_text = f\"Button Element '{button.text}'\" if (button.text != None and button.text != \"\") else \"Button Element Without Name (might be an image)\"\n",
+    "            elements.append(button_text)\n",
+    "\n",
+    "    ## LINKS  \n",
+    "    links = driver.find_elements(By.TAG_NAME,\"a\")\n",
+    "    for link in links:\n",
+    "        if link.is_displayed():\n",
+    "            # Link Element Attributes\n",
+    "            link_text = f\"Link Element '{link.text}'\" if (link.text != None and link.text != \"\") else \"Link Element Without Name (might be an image)\"\n",
+    "            elements.append(link_text)\n",
+    "\n",
+    "    # TEXT\n",
+    "    # Heading Elements\n",
+    "    for level in range(1, 7):  # HTML has 6 levels of headings (h1 to h6)\n",
+    "        headings = driver.find_elements(By.TAG_NAME,f\"h{level}\")\n",
+    "        for heading in headings:\n",
+    "            if heading.is_displayed():\n",
+    "                store = f\"Heading Element (h{level}): '{heading.text}'\"\n",
+    "                elements.append(store)\n",
+    "                \n",
+    "    # Paragraph Elements\n",
+    "    paragraphs = driver.find_elements(By.TAG_NAME,\"p\")\n",
+    "    for paragraph in paragraphs:\n",
+    "        if paragraph.is_displayed():\n",
+    "            store = f\"Paragraph Element: '{paragraph.text}'\"\n",
+    "            elements.append(store)\n",
+    "\n",
+    "    # Input Elements\n",
+    "    input_tags = driver.find_elements(By.TAG_NAME,\"input\")\n",
+    "    for input_tag in input_tags:\n",
+    "        if input_tag.is_displayed():\n",
+    "            # Store based on type\n",
+    "            if (input_tag.get_attribute('type') == \"submit\"):\n",
+    "                store = f\"Form Submit Button Element: {input_tag.get_attribute(\"name\")}\"\n",
+    "                elements.append(store)\n",
+    "            else:\n",
+    "                elements.append(input_field_name)\n",
+    "            \n",
+    "    # Close the browser\n",
+    "    driver.quit()\n",
+    "\n",
+    "    return elements\n",
+    "\n"
    ]
   }
  ],
