--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -381,6 +381,94 @@
     "\n",
     "    return dataframe_init(data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3.A - Split Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Planning\n",
+    "def divide_scraped_data():\n",
+    "    pass\n",
+    "\n",
+    "## Step 1: Divide By Element ##\n",
+    "duplicate_check = divide_scraped_data(\"By_ELEMENT\")\n",
+    "\n",
+    "## Step 1.5: Setup Functions\n",
+    "# Pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Table Dataframe Initialization\n",
+    "def dataframe_init(data):\n",
+    "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
+    "    return df\n",
+    "\n",
+    "def create_table_dataset(llm_output, booleans=[]):\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = 0\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "        \n",
+    "        # Validate and skip if split is a failure\n",
+    "        if len(split_test_case) != 4:\n",
+    "            if (booleans[i] == False or booleans == []):\n",
+    "                i+=1\n",
+    "                sub = 0\n",
+    "            elif (booleans[i] == True):\n",
+    "                sub += 1\n",
+    "\n",
+    "            # Test Case ID\n",
+    "            id.append(i + '.' + sub)\n",
+    "            # Test Case Objective\n",
+    "            objective.append(split_test_case[0])\n",
+    "            # Test Case Precondition\n",
+    "            precondition.append(split_test_case[1])\n",
+    "            # Test Case Steps \n",
+    "            test_steps.append(split_test_case[2])\n",
+    "            # Test Case Expected Output\n",
+    "            expected_result.append(split_test_case[3])\n",
+    "            # Test Case Actual Result\n",
+    "            actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)\n",
+    "\n",
+    "# Step 2: Divide By Title\n",
+    "data = divide_scraped_data(\"By_Title\")\n",
+    "\n",
+    "# in views.py\n",
+    "def create_tables(data):\n",
+    "    tables = []\n",
+    "    for item in data:\n",
+    "        tables.append(create_table_dataset(item, duplicate_check)).to_html() # with html parameters\n",
+    "\n",
+    "# Step 3: Create Tables\n",
+    "# - Steps 1-1.5 handle the sub-ids\n",
+    "# - Step 2 (in views.py) results in a list of dataframes table that I can subscript to the html in theory\n",
+    "split_table_by_element = create_tables()\n",
+    "# For downloading csv / pdf use original dataset, only using steps 1-1.5 for processing\n"
+   ]
   }
  ],
  "metadata": {
