Plan 4 or Version 3.C preparations

--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -469,6 +469,77 @@
     "split_table_by_element = create_tables()\n",
     "# For downloading csv / pdf use original dataset, only using steps 1-1.5 for processing\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 3.B : Accomplishing the 3.C plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Adjust Create Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# System Proper Parameters\n",
+    "def create_table_dataset(llm_output, ids : list, saved_index : int = 0):\n",
+    "\n",
+    "    id = []\n",
+    "    objective = []\n",
+    "    precondition = []\n",
+    "    test_steps = []\n",
+    "    expected_result = []\n",
+    "    actual_result = []\n",
+    "\n",
+    "    i = saved_index\n",
+    "    for test_case in llm_output:\n",
+    "        split_test_case = test_case.split('~')\n",
+    "        \n",
+    "        # Validate and skip if split is a failure\n",
+    "        if len(split_test_case) != 4:\n",
+    "            # Test Case ID\n",
+    "            id.append(ids[i])\n",
+    "            # Test Case Objective\n",
+    "            objective.append(split_test_case[0])\n",
+    "            # Test Case Precondition\n",
+    "            precondition.append(split_test_case[1])\n",
+    "            # Test Case Steps \n",
+    "            test_steps.append(split_test_case[2])\n",
+    "            # Test Case Expected Output\n",
+    "            expected_result.append(split_test_case[3])\n",
+    "            # Test Case Actual Result\n",
+    "            actual_result.append(\"Pass/Fail\")\n",
+    "\n",
+    "        i+=1\n",
+    "\n",
+    "    data = {\"Test Case ID\" : id,\n",
+    "            \"Objective\" : objective,\n",
+    "            \"Precondition\" : precondition,\n",
+    "            \"Test Steps\" : test_steps,\n",
+    "            \"Expected Result\" : expected_result,\n",
+    "            \"Actual Result\" : actual_result}\n",
+    "\n",
+    "    return dataframe_init(data)\n",
+    "\n",
+    "def create_tables(divided_llm_output, ids, indices):\n",
+    "    tables = []\n",
+    "    i = 0\n",
+    "\n",
+    "    for llm_output in divided_llm_output:\n",
+    "        tables.append(create_table_dataset(llm_output, ids, indices[i]))\n",
+    "        i+=1\n",
+    "\n",
+    "    return tables"
+   ]
   }
  ],
  "metadata": {
