finetuning_evaluation notebook train sets setup

--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -493,6 +493,13 @@
     "## MAIN PROGRAM ##\n",
     "print(\"Welcome to Dataset Generator V3\")\n",
     "\n",
+    "# Auto filename\n",
+    "def clean_url(url : str):\n",
+    "    articles = ['https', 'www', ':', '/', '\\\\', '*', '?', '<', '>', '|', '.']\n",
+    "    for article in articles:\n",
+    "        url = url.replace(article, '')\n",
+    "    return url\n",
+    "\n",
     "## Input URL\n",
     "url = get_url()\n",
     "start = time.time()\n",
@@ -508,8 +515,9 @@
     "print(f\"Generation Finished In : {(end-start) * 10**3}, ms\")\n",
     "\n",
     "## Create Fine Tuning Dataset\n",
-    "fine_tuning_dataset = create_fine_tuning_dataset(scraped_data, llm_output, url=url)\n",
-    "print(\"Dataset is Generated as a CSV File. Please rename it before running this notebook again\")"
+    "filename = clean_url(url)\n",
+    "fine_tuning_dataset = create_fine_tuning_dataset(scraped_data, llm_output, name=filename, url=url)\n",
+    "print(f\"Dataset is Generated as a CSV File ({filename}.csv).\")"
    ]
   },
   {
